tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__4096kEssentiaSto-G5g_5_24RS6sqhmjFEbf8A==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 18282438751521529840,
  "prerequisites": [
    12965663698865888619
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These hold 8,388,608 units of essentia.\n\nAnd can hold 48 types.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "4096k Essentia Storage Cell",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    12965663698865888619
  ],
  "rewards": [],
  "tasks": []
}
