tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AppliedEnergisti-AAAAAAAAAAAAAAAAAAAAIw==__4kFluidStorageCe-AAAAAAAAAAAAAAAAAAAJsw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2483,
  "prerequisites": [
    2479
  ],
  "properties": {
    "auto_claim": false,
    "desc": "These hold over 8 ML of a single fluid.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "4k Fluid Storage Cell",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2479
  ],
  "rewards": [],
  "tasks": []
}
